# internal_template

./: .clang-format  CMakeLists.txt  README.md
inc/: MinHook.h
src/: dllmain.cpp
src/features/: c_example_feature.cpp  c_example_feature.h  c_feature.cpp  c_feature.h  example_feature_t.h  feature_t.h  features.h
src/process/hooks/: example_hook.cpp  example_hook.h  hooks.h
src/process/structs/: example_struct_t.h
src/utils/: c_feature_mgr.cpp  c_feature_mgr.h  c_hook.cpp  c_hook.h  c_hook_mgr.cpp  c_hook_mgr.h  c_log.cpp  c_log.h  hook_mgr.h  log_t.h  pattern_scan.cpp  pattern_scan.h
